--- a/src/main/res/layout/activity_play.xml
+++ b/src/main/res/layout/activity_play.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/playbackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PlayActivity">
@@ -15,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/play_menu"/>
+        app:menu="@menu/play_menu" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -73,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:thumbTint="#AA99DE"
+        android:progressTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvArtist" />
